--- a/index.html
+++ b/index.html
@@ -17,12 +17,20 @@
   <script defer src="libBag.js"></script>
   <script defer src="libBagFs.js"></script>
   <script defer src="libParse.js"></script>
+  <script defer src="libDbFiles.js"></script>
+  <script defer src="libSyncT2TUsingHash.js"></script>
   <script defer src="libMainFunction.js"></script>
   <script defer src="libCheck.js"></script>
   <script defer src="libSettingsPre.js"></script>
   <script defer src="settings.js"></script>
   <script defer src="libDivs.js"></script>
+  <script defer src="divsSmall.js"></script>
+  <script defer src="divsInFront.js"></script>
+  <script defer src="divsT2D.js"></script>
+  <script defer src="divsT2T.js"></script>
+  <script defer src="divsCollision.js"></script>
   <script defer src="divs.js"></script>
+  <script defer src="divsArgumentTab.js"></script>
   <script defer src="mainB.js"></script>
 
   <link rel="stylesheet" href="node_modules/@xterm/xterm/css/xterm.css" />
