Location relation split

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
   <script defer src="divsT2D.js"></script>
   <script defer src="divsT2T.js"></script>
   <script defer src="divsCollision.js"></script>
+  <script defer src="miniView.js"></script>
   <script defer src="divs.js"></script>
-  <script defer src="divsArgumentTab.js"></script>
+  <script defer src="divsArgument.js"></script>
+  <script defer src="divsRelationTab.js"></script>
+  <script defer src="divsLocationTab.js"></script>
   <script defer src="mainB.js"></script>
 
   <link rel="stylesheet" href="node_modules/@xterm/xterm/css/xterm.css" />
